Compilation/test/error/test7_error.tpc
char car 

	void decl(int a chr b){

	while(1 < 2){
		A = a + B;	
        soustrait(A, B);
}